@@ -45,6 +45,11 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 
 * Registration time of users registered before the DB field was created is now
   shown as empty instead of the current time.
+* API search now falls back to fulltext search by default when using Lucene
+  or other engine which doesn't support a separate title search function.
+  This means you can use API search on Wikipedia without explicitly adding
+  &srwhat=text to the query.
+
 
 === Languages updated in 1.14 ===
 
